Optimizando dependencias y springBoot